assets/css/style.css
/*
COLORS:

- #8BAE96 Cambridge Blue
- #3A5B85 Bdazzeled Blue
- #A63D40 Sweet Brown
- #19180A Black Chocolate

*/


:root {
    --screen-sm: 768px;
    --screen-md: 1024px;
    --screen-lg: 1200px;
    --screen-xl: 1600px;
      }



/* Clearning css and zeroing all margins, pads and borders */
* {
    margin: 0px;
    padding: 0px;
    border: none;
}

/* 
.main {
    margin-top: 10vh; /* Add a top margin to avoid content overlay */
 /* } */

body {
    background-color:#3C3D3E;
    color: #3C3D3E;
    --overflow: hidden;
}


#map {
    height: 400px;
    /* The height is 400 pixels */
    width: 100%;
    /* The width is the width of the web page */
  }

/* Starting the scrollbar under the navbar */
/* https://stackoverflow.com/questions/29017536/bootstrap-make-vertical-browser-scrollbar-start-under-fixed-navbar-not-overla/29017945 */
#container {
    width: 100%;
    position: fixed;
    top: 10vh;
    bottom: 0;
    overflow: auto;
}

.navbar {
    overflow: hidden;
    background-color: #333;
    position: fixed; /* Set the navbar to fixed position */
    top: 0; /* Position the navbar at the top of the page *//* width */
    width: 100%; /* Full width */
    z-index: 999; /* Setting navbar to be always on top */
    line-height: 10vh;
  }



/* main menu navigation links */

.menu {
    font-size: 150%;
    letter-spacing: 4px;
    float: right; /* Floating the parent element right */
    color: #FFF;
}

.menu li {
    float: left; /* Floating the links in order */
    list-style-type: none;
    margin-right: 30px;
}

/* Targeting descendent links of the menu id */
.menu a, .logo a {
    text-decoration: none; /* removing the   for hyperlinks */
    color: inherit; /* Links will inherit the color from the closest parent; in this case body */
} 

/* This is the logo at the top left of the page */
.logo {
    float: left;
    font-size: 200%;
    margin-left: 30px;
    color: #FFF;
}

#hero-outer {
    height: 90vh;
    width: 100%;
    overflow: hidden;

    /* this is the parent container for the 
    cover text; we need to set this to relative so the child
    elements will be relative to the hero outer */
    position: relative;
}


/* hero image */
.hero-image {
    background-image: url(../images/hero-image.jpg);
    width: 100%;
    height: 95%;
    background-size: cover;
    background-size: cover;
    -webkit-animation: fadein 6s normal forwards; /* Safari, Chrome and Opera > 12.1 */
       -moz-animation: fadein 6s normal forwards; /* Firefox < 16 */
        -ms-animation: fadein 6s normal forwards; /* Internet Explorer */
         -o-animation: fadein 6s normal forwards; /* Opera < 12.1 */
            animation: fadein 6s normal forwards;
}


/* **************************************** */
/* Fade in Animation; cross-browser support */

    /* Firefox < 16 */
    @-moz-keyframes fadein {
        from { opacity: 0; }
        to   { opacity: 1; }
    }

    /* Safari, Chrome and Opera > 12.1 */
    @-webkit-keyframes fadein {
        from { opacity: 0; }
        to   { opacity: 1; }
    }

    /* Internet Explorer */
    @-ms-keyframes fadein {
        from { opacity: 0; }
        to   { opacity: 1; }
    }

    /* Opera < 12.1 */
    @-o-keyframes fadein {
        from { opacity: 0; }
        to   { opacity: 1; }
    }
/* **************************************** */




.hero-text h1, .hero-text h3 {
    color: #fff;
}

.hero-text {
    font-size: 100%;
    font-family: sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;
    text-align: center;
    line-height: 100px;

    width: 60%;
    height: 20%;

    margin-top: 10%;
    margin-left: 20%;
    margin-right: 20%;

    background-color:rgb(110, 135, 118, 0.75);
}

.position-on-top {
    bottom: 0%;
    right: 0%;
    left: 0%;
    top: 5%;
    position: absolute;
}


/* **************************************** */
/* Styling the sections with borders        */

.section-border {
    border-width: 2px;
    border-style: dashed;
    border-color:#3A5B85;
    margin: 2.5vh 12.5vw;
    padding: 2.5vh 2.5vw;
    background-color: #fff;
}

.section-title {
    padding: 15px 15px 0px 0px;
    color:#D7CEAD;
    font-size: 250%;
    text-align: center;
    letter-spacing:5px;
}
/* **************************************** */


/* **************************************** */
/* Footer elements */
.social-networks {
    text-align: center;
}

.social-networks > li {
    display: inline; /* Setting the display to inline for the list elements */
     }


/* Footer Elements - font */
.social-networks i {
    font-size: 300%;
    color: #fff;
    margin: 1%;
    padding: 2%;
}
/* **************************************** */



/* **************************************** */
/* Flexbox Configuration */

.flex-parent {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    background-color:rgb(110, 135, 118, 0.5); 
  }

/* Flexbox Configuration for Two Rows */  

.column-two {
    flex: 50%;
    box-sizing: border-box;
  }

.column-two p {
    text-align: center;   
}

.column-two img {
    object-fit: cover;
    width: 100%;
    display: block; /*Removing the gap at bottom of image */
}

/* Flexbox Configuration for Three Columns Rows */  
  
.column-three {
    flex: 33%;
    box-sizing: border-box;
  }

.column-three .tour-text {
    text-align: center;
  }


/* **************************************** */
/* Custom Scrollbar                         */

/* width */
::-webkit-scrollbar {
    width: 20px;
    left: -100px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px grey;
    border-radius: 10px;
  }
  
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: #8BAE96;
    border-radius: 10px;
  }

/* **************************************** */
/* Responsive Elements */
/* **************************************** */


/* For medium screen sizes from 950px and below */
@media screen and (max-width: 950px) {

    /* This floats our menu bar to the left if the screen size falls */
    .menu {
        clear: left;
        float: left;
        margin-left: 30px;
        margin-bottom: 20px;
        line-height: 25px
    }

    .column-three {
        flex: 100%;
        box-sizing: border-box;
    }

    .column-two {
        flex: 100%;
        box-sizing: border-box;
    }
}

